--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -1,58 +1,58 @@
-worker_processes auto;
-rtmp_auto_push on;
-events {}
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
+
 rtmp {
     server {
-        listen 1935;
-        listen [::]:1935 ipv6only=on;
+        listen 1935;  # RTMP Port
+        chunk_size 4096;
 
         application live {
             live on;
             record off;
+
+            # Enable HLS
+            hls on;
+            hls_path /mnt/hls;  # Persistent HLS storage
+            hls_fragment 3s;
+            hls_playlist_length 60s;
+            hls_cleanup on;
+            hls_continuous on;
         }
     }
 }
 
+http {
+    server {
+        listen 8081;  # HTTP Server for HLS
 
-# rtmp {
-#     server {
-#         listen 1935;  # Default RTMP port
-#         chunk_size 4096;
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+        }
 
-#         application live {
-#             live on;
-#             record off;
-
-#             # Enable HLS
-#             hls on;
-#             hls_path /var/www/rtmp/hls;  # Path where .ts and .m3u8 files will be stored
-#             hls_fragment 3s;  # Duration of each HLS chunk (in seconds)
-#             hls_playlist_length 60s;  # Maximum length of the HLS playlist (in seconds)
-
-#             # Optional: HLS cleanup
-#             hls_cleanup on;  # Delete old HLS chunks after they are no longer needed
-#             hls_continuous on;  # Continue the playlist without gaps
-#         }
-#     }
-# }
-
-# http {
-#     server {
-#         listen 8080;  # HTTP port for HLS playback
-
-#         location / {
-#             root /usr/share/nginx/html;
-#             index index.html index.htm;
-#         }
-
-#         location /hls {
-#             types {
-#                 application/vnd.apple.mpegurl m3u8;
-#                 video/mp2t ts;
-#             }
-#             root /var/www/rtmp/hls;
-#             add_header Cache-Control no-cache;
-#             add_header Access-Control-Allow-Origin *;  # For cross-origin requests
-#         }
-#     }
-# }
+        location /hls {
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                video/mp2t ts;
+            }
+            root /mnt/hls;  # Match HLS path
+            add_header Cache-Control no-cache;
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+            add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header Access-Control-Expose-Headers 'Content-Length,Content-Range';
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+                add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header Access-Control-Max-Age 1728000;
+                add_header Content-Type 'text/plain; charset=utf-8';
+                add_header Content-Length 0;
+                return 204;
+            }
+        }
+    }
+}
